# i3lockr

./: .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT.md  README.md  TODO.md  USAGE.md  build.rs  gen_usage.sh
.githooks/: pre-commit  pre-push
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build_release.yml  clippy.yml  rust.yml  rust_ci.yml  rustsec.yml
shell-completions/: _i3lockr  _i3lockr.ps1  i3lockr.bash  i3lockr.elv  i3lockr.fish
src/: algorithms.rs  blur.rs  brightness.rs  cli.rs  cli.yaml  ffi.rs  macros.rs  main.rs  overlay.rs  scale.rs  screenshot.rs
src/C/: stackblur.c  stackblur.h
src/cli/: mod.rs  validators.rs
src/pixels/: error.rs  mod.rs
