[package]
name = "i3lockr"
version = "1.2.1"
authors = ["Owen Walpole <owen@walpole.dev>"]
edition = "2021"
description = "Distort a screenshot and run i3lock"
repository = "https://github.com/owenthewizard/i3lockr"
license = "MIT OR Apache-2.0"
keywords = ["i3lockr", "i3lock", "i3lock-fancy", "blur", "i3lock-color" ]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
blend-srgb = { version = "0.1", optional = true }
imagefmt = { version = "4", default-features = false, optional = true }
imgref = "1"
itertools = { version = "0.13", optional = true }
libc = "0.2" # should be same as xcb
num_cpus = "1"
rayon = { version = "1", optional = true }
rgb = "0.8"
scrap = { git = "https://github.com/owenthewizard/scrap" }
stackblur-iter = { version = "0.2", optional = true, features = ["blend-srgb"] }
clap = { version = "4", features = ["derive"] }
xcb = { version = "1", features = ["randr", "shm"] }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[features]
png = ["imagefmt/png", "dep:blend-srgb"]
jpeg = ["imagefmt/jpeg", "dep:blend-srgb"]
threads = ["dep:rayon", "stackblur-iter?/rayon"]
blur = ["dep:stackblur-iter"]
scale = ["dep:itertools"]
brightness = []
verbose = []
default = ["png", "jpeg", "threads", "blur", "scale", "brightness"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
