[package]
name = "i3lockr"
description = "Distort a screenshot and run i3lock"
version = "1.2.1"
license = "MIT OR Apache-2.0"
authors = ["Owen Walpole <owenthewizard@hotmail.com>"]
repository = "https://github.com/owenthewizard/i3lockr"
readme = "README.md"
keywords = ["i3lockr", "i3lock", "i3lock-fancy", "blur", "i3lock-color" ]
categories = ["command-line-utilities", "multimedia::images"]
edition = "2021"

[badges]
is-it-maintained-issue-resolution = { repository = "owenthewizard/i3lockr" }
is-it-maintained-open-issues = { repository = "owenthewizard/i3lockr" }

maintenance = { status = "actively-developed" }


[dependencies]
blend-srgb = { version = "0.1", optional = true }
imagefmt = { version = "4", default-features = false, optional = true }
imgref = "1"
itertools = { version = "0.13", optional = true }
libc = "0.2" # should be same as xcb
num_cpus = "1"
rayon = { version = "1", optional = true }
rgb = "0.8"
scrap = { git = "https://github.com/owenthewizard/scrap" }
stackblur-iter = { version = "0.2", optional = true, features = ["blend-srgb"] }
structopt = { version = "0.3", default-features = false }
xcb = { version = "1", features = ["randr", "shm"] }

[build-dependencies]
structopt = { version = "0.3", default-features = false }

[features]
suggestions = ["structopt/suggestions"]
color = ["structopt/color"]
png = ["imagefmt/png", "dep:blend-srgb"]
jpeg = ["imagefmt/jpeg", "dep:blend-srgb"]
threads = ["dep:rayon", "stackblur-iter?/rayon"]
blur = ["dep:stackblur-iter"]
scale = ["dep:itertools"]
brightness = []
verbose = []
default = ["suggestions", "color", "png", "jpeg", "threads", "blur", "scale", "brightness"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
